package Iterator;
/**
 * Інтерфейс для ітератора, який дозволяє здійснювати обхід елементів колекції.
 */
public interface Iterator {
    /**
     * Перевіряє чи є наступний елемент у колекції.
     */
    boolean hasNext();
    /**
     * Отримує наступний елемент з колекції.
     */
    Object getNext();
}